Fix z-index eventbrite mobile

--- a/src/sass/modules/_intro.scss
+++ b/src/sass/modules/_intro.scss
@@ -33,7 +33,7 @@
 		bottom: 75px;
 		left:0;
 	    padding: 0 20px;
-		z-index: 50;
+		z-index: 100;
 		padding-top: 19vh;
 		
 		@media (max-height: 500px) {
